// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validate plugin options should work 1`] = `
"Invalid options object. Image Minimizer Plugin has been initialized using an options object that does not match the API schema.
 - options.test should be one of these:
   [RegExp | non-empty string, ...] | RegExp | non-empty string
   -> Filtering rules.
   Details:
    * options.test should be an array:
      [RegExp | non-empty string, ...]
    * options.test should be one of these:
      RegExp | non-empty string
      -> Filtering rule as regex or string.
      Details:
       * options.test should be an instance of RegExp.
       * options.test should be a non-empty string."
`;

exports[`validate plugin options should work 2`] = `
"Invalid options object. Image Minimizer Plugin has been initialized using an options object that does not match the API schema.
 - options.test should be one of these:
   [RegExp | non-empty string, ...] | RegExp | non-empty string
   -> Filtering rules.
   Details:
    * options.test[0] should be one of these:
      RegExp | non-empty string
      -> Filtering rule as regex or string.
      Details:
       * options.test[0] should be an instance of RegExp.
       * options.test[0] should be a non-empty string."
`;

exports[`validate plugin options should work 3`] = `
"Invalid options object. Image Minimizer Plugin has been initialized using an options object that does not match the API schema.
 - options.include should be one of these:
   [RegExp | non-empty string, ...] | RegExp | non-empty string
   -> Filtering rules.
   Details:
    * options.include should be an array:
      [RegExp | non-empty string, ...]
    * options.include should be one of these:
      RegExp | non-empty string
      -> Filtering rule as regex or string.
      Details:
       * options.include should be an instance of RegExp.
       * options.include should be a non-empty string."
`;

exports[`validate plugin options should work 4`] = `
"Invalid options object. Image Minimizer Plugin has been initialized using an options object that does not match the API schema.
 - options.include should be one of these:
   [RegExp | non-empty string, ...] | RegExp | non-empty string
   -> Filtering rules.
   Details:
    * options.include[0] should be one of these:
      RegExp | non-empty string
      -> Filtering rule as regex or string.
      Details:
       * options.include[0] should be an instance of RegExp.
       * options.include[0] should be a non-empty string."
`;

exports[`validate plugin options should work 5`] = `
"Invalid options object. Image Minimizer Plugin has been initialized using an options object that does not match the API schema.
 - options.exclude should be one of these:
   [RegExp | non-empty string, ...] | RegExp | non-empty string
   -> Filtering rules.
   Details:
    * options.exclude should be an array:
      [RegExp | non-empty string, ...]
    * options.exclude should be one of these:
      RegExp | non-empty string
      -> Filtering rule as regex or string.
      Details:
       * options.exclude should be an instance of RegExp.
       * options.exclude should be a non-empty string."
`;

exports[`validate plugin options should work 6`] = `
"Invalid options object. Image Minimizer Plugin has been initialized using an options object that does not match the API schema.
 - options.exclude should be one of these:
   [RegExp | non-empty string, ...] | RegExp | non-empty string
   -> Filtering rules.
   Details:
    * options.exclude[0] should be one of these:
      RegExp | non-empty string
      -> Filtering rule as regex or string.
      Details:
       * options.exclude[0] should be an instance of RegExp.
       * options.exclude[0] should be a non-empty string."
`;

exports[`validate plugin options should work 7`] = `
"Invalid options object. Image Minimizer Plugin has been initialized using an options object that does not match the API schema.
 - options.minimizerOptions.filter should be an instance of function.
   -> Allows filtering of images for optimization."
`;

exports[`validate plugin options should work 8`] = `
"Invalid options object. Image Minimizer Plugin has been initialized using an options object that does not match the API schema.
 - options.minimizerOptions.filter should be an instance of function.
   -> Allows filtering of images for optimization."
`;

exports[`validate plugin options should work 9`] = `
"Invalid options object. Image Minimizer Plugin has been initialized using an options object that does not match the API schema.
 - options.severityError should be a string.
   -> Allows to choose how errors are displayed."
`;

exports[`validate plugin options should work 10`] = `
"Invalid options object. Image Minimizer Plugin has been initialized using an options object that does not match the API schema.
 - options.severityError should be a string.
   -> Allows to choose how errors are displayed."
`;

exports[`validate plugin options should work 11`] = `
"Invalid options object. Image Minimizer Plugin has been initialized using an options object that does not match the API schema.
 - options.severityError should be a string.
   -> Allows to choose how errors are displayed."
`;

exports[`validate plugin options should work 12`] = `
"Invalid options object. Image Minimizer Plugin has been initialized using an options object that does not match the API schema.
 - options.minimizerOptions should be one of these:
   object { filename?, deleteOriginalAssets?, filter?, … } | [object { filename?, deleteOriginalAssets?, filter?, … }, ...] (should not have fewer than 1 item)
   -> Options for \`imageMinimizerOptions\`.
   Details:
    * options.minimizerOptions should be an object:
      object { filename?, deleteOriginalAssets?, filter?, … }
    * options.minimizerOptions should be an array:
      [object { filename?, deleteOriginalAssets?, filter?, … }, ...] (should not have fewer than 1 item)"
`;

exports[`validate plugin options should work 13`] = `
"Invalid options object. Image Minimizer Plugin has been initialized using an options object that does not match the API schema.
 - options.minimizerOptions should be one of these:
   object { filename?, deleteOriginalAssets?, filter?, … } | [object { filename?, deleteOriginalAssets?, filter?, … }, ...] (should not have fewer than 1 item)
   -> Options for \`imageMinimizerOptions\`.
   Details:
    * options.minimizerOptions.filename should be one of these:
      string | function
      Details:
       * options.minimizerOptions.filename should be a string.
       * options.minimizerOptions.filename should be an instance of function."
`;

exports[`validate plugin options should work 14`] = `
"Invalid options object. Image Minimizer Plugin has been initialized using an options object that does not match the API schema.
 - options.minimizerOptions should be one of these:
   object { filename?, deleteOriginalAssets?, filter?, … } | [object { filename?, deleteOriginalAssets?, filter?, … }, ...] (should not have fewer than 1 item)
   -> Options for \`imageMinimizerOptions\`.
   Details:
    * options.minimizerOptions.filename should be one of these:
      string | function
      Details:
       * options.minimizerOptions.filename should be a string.
       * options.minimizerOptions.filename should be an instance of function."
`;

exports[`validate plugin options should work 15`] = `
"Invalid options object. Image Minimizer Plugin has been initialized using an options object that does not match the API schema.
 - options.minimizerOptions.deleteOriginalAssets should be a boolean."
`;

exports[`validate plugin options should work 16`] = `
"Invalid options object. Image Minimizer Plugin has been initialized using an options object that does not match the API schema.
 - options.maxConcurrency should be a number.
   -> Maximum number of concurrency optimization processes in one time."
`;

exports[`validate plugin options should work 17`] = `
"Invalid options object. Image Minimizer Plugin has been initialized using an options object that does not match the API schema.
 - options.maxConcurrency should be a number.
   -> Maximum number of concurrency optimization processes in one time."
`;

exports[`validate plugin options should work 18`] = `
"Invalid options object. Image Minimizer Plugin has been initialized using an options object that does not match the API schema.
 - options.loader should be a boolean.
   -> Automatically adding \`imagemin-loader\` (require for minification images using in \`url-loader\`, \`svg-url-loader\` or other)."
`;

exports[`validate plugin options should work 19`] = `
"Invalid options object. Image Minimizer Plugin has been initialized using an options object that does not match the API schema.
 - options.minify should be one of these:
   function | [function, ...] (should not have fewer than 1 item)
   -> Allows you to override default minify function.
   Details:
    * options.minify should be an instance of function.
    * options.minify should be an array:
      [function, ...] (should not have fewer than 1 item)"
`;
